--- a/app/views/clubs/new.html.erb
+++ b/app/views/clubs/new.html.erb
@@ -9,6 +9,18 @@
     <%= f.input :details %>
   </div>
   <div>
+  <%= f.input :address %>
+  </div>
+  <div>
+  <%= f.input :instagram_link %>
+  </div>
+  <div>
+  <%= f.input :phone_number %>
+  </div>
+  <div>
+  <%= f.input :IBAN %>
+  </div>
+  <div>
     <%= f.input :image, as: :file %>
   </div>
   <div>
