--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -28,7 +28,6 @@ body {
   align-items: center;
   position: relative;
   overflow: hidden;
-  position: relative;
 }
 
 .club-img {
@@ -85,20 +84,26 @@ body {
 
 .location-tag {
   color: white;
-  max-width: 150px;
+  max-width: 200px;
   word-break: break-word;
   display: flex;
 }
 
 .instagram-tag {
-  max-width: 150px;
+  max-width: 200px;
   word-break: break-word;
+  display: flex;
+}
+
+.phone-tag {
+  max-width: 200px;
   display: flex;
 }
 
 .club-icon-text {
   color: white;
   margin-left: 5px;
+  font-size: 15px;
 }
 
 .fa-solid {
@@ -112,13 +117,17 @@ body {
   color:#A7E6FF;
 }
 
+.custom-icon {
+  font-size: 2em;
+}
+
 
 .map {
-  margin-right: -15px;
-  height:180px;
-  width:180px;
-  margin-left: 23px;
-  border-radius: 5px;
+  flex: 0 0 180px;
+  height: 180px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .maps  {
@@ -126,6 +135,9 @@ body {
   height:180px;
   width:180px;
   border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 
