--- a/app/views/activities/_info_window.html.erb
+++ b/app/views/activities/_info_window.html.erb
@@ -1,4 +1,4 @@
-<%= link_to activity_path(activity) do %>
+<%= link_to activity_path(activity), data: {turbo_frame: '_top'} do %>
   <h2 class="activities-name-info-window"><strong><%= activity.title %></strong></h2>
 <p><%= activity.address %></p>
 <% end %>
