--- a/app/views/shared/_activities.html.erb
+++ b/app/views/shared/_activities.html.erb
@@ -3,7 +3,9 @@
       <% @activities.each do |activity| %>
         <div class="activities-item">
           <%= link_to activity_path(activity), data: {turbo_frame: '_top'} do %>
-            <div class="activities-image" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://i0.wp.com/www.muscleandfitness.com/wp-content/uploads/2020/05/uppercut-boxing-man.jpg?w=1180&quality=86&strip=all);">
+          <% if activity.image.attached?  %>
+            <div class="activities-image" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('<%= cl_image_path activity.image.key, height: 300, crop: :fill %>');">
+              <% end %>
               <h2 class="activities-name"><strong><%= activity.title %></strong></h2>
             </div>
             <div class="activities-index-borders"></div>
