--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,5 +27,5 @@
     <div class='badge'>
     <%= image_tag 'editors-choice-badge.png', width: 120 %>
     </div>
-     <%= render "shared/navbar" %>
+     <%# <%= render "shared/navbar" %>
   </body>
