--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -3,7 +3,7 @@
   <% end %>
 
 <div class="activity-image">
-  <%= image_tag 'man_boxing.png', alt: 'Boxing Lesson', class: 'activity-img' %>
+  <%= cl_image_tag @activity.image.key, alt: 'Boxing Lesson', class: 'activity-img' %>
 </div>
 
 <div class= "body-activity">
