--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -2,7 +2,7 @@
   <%=image_tag 'back-btn.png', alt: 'Back', class: 'back-button-img' %>
   <% end %>
 <div class="activity-image" style="position: relative;">
-  <%= image_tag @club.image, alt: 'uploaded-club-image', class: 'club-img' %>
+  <%= image_tag "man_boxing.png", alt: 'uploaded-club-image', class: 'club-img' %>
 </div>
 
 <div class= "club-details">
