--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -1,12 +1,16 @@
 .club-bodybag {
-  background-color: black;
+  background-color: #A7E6FF;
   padding-bottom: 25px;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  height: 183px;
 }
 
 .dash-title {
   text-align: center;
   padding-top: 20px;
-  color: white;
+  color: black;
   margin-bottom: 20px;
 }
 
@@ -17,6 +21,8 @@
 
 .club-image-container {
   position: relative;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .club-image {
@@ -54,7 +60,7 @@
 .user-info p {
   font-size: small;
   margin-left: 7px;
-  color:white;
+  color:black;
 }
 
 .create-club-button {
@@ -67,12 +73,17 @@
   gap: 20px;
   margin-top: 30px;
   margin-bottom: 95px;
+  width: 300px;
+  margin-left:auto;
+  margin-right:auto;
+
 }
 
 .btn {
   height:40px;
   font-size:15px;
-  border-radius: 5px;
+  border-radius: 28px;
+  border:solid thin black;
 }
 
 
@@ -80,11 +91,19 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: rgba(255, 0, 0, 0.7);
-  color: white;
-  border: none;
+  border:solid thin;
+  background-color: #d94f34;
   border-radius: 5px;
   padding: 5px 10px;
   text-decoration: none;
   font-size: 14px;
+  width: 50px;
+  height: 50px;
+}
+
+.trashcan {
+ width: 37px;
+ height: 33px;
+ padding-right: 11px;
+
 }
