--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -15,48 +15,8 @@
 }
 
 .dashclub-title {
-  text-align: center;
-  margin-top: 30px;
-}
-
-.club-image-container {
-  position: relative;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-  border: solid #A7E6FF;
-  border-radius: 23px;
-
-}
-
-.club-image {
-    height:300px;
-    width: 100%;
-    border-radius: 20px;
-    object-fit: cover;
-  }
-
-.clubs-name {
-  padding-left: 10px;
-  padding-top: 10px;
-  color: white;
-  position: relative;
-}
-
-.club-name-overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  color: white;
-  text-align: center;
-  padding: 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.club-name-link {
-  color: white;
-  text-decoration: none;
+  margin-top: 8px;
+  margin-left: 10px;
 }
 
 .user-info p {
@@ -65,19 +25,129 @@
   color:black;
 }
 
+.buttons-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
 .create-club-button {
   margin-left: 77px;
 }
 
+.logout-button {
+  margin-top: 10px;
+}
+
+// .club-image-container {
+//   position: relative;
+//   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+//   border: solid #A7E6FF;
+//   border-radius: 23px;
+
+// }
+
+.club-image-container {
+  flex: 0 0 100px; /* Fixed width for the image container */
+  height: 100px; /* Fixed height for the image container */
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.club-image {
+    height:100%; //300px
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    border: solid thin black;
+  }
+
+// .clubs-name {
+//   padding-left: 10px;
+//   padding-top: 10px;
+//   color: white;
+//   position: relative;
+// }
+
+
+.clubs-name {
+  margin: 0;
+  text-decoration: underline;
+}
+
+// .club-name-overlay {
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   width: 100%;
+//   background: rgba(0, 0, 0, 0.5);
+//   color: white;
+//   text-align: center;
+//   padding: 10px;
+//   border-bottom-left-radius: 10px;
+//   border-bottom-right-radius: 10px;
+// }
+
+.club-name-overlay {
+  margin-bottom: 10px;
+}
+
+.club-info-container {
+  flex: 1;
+  padding-left: 20px;
+}
+
+.club-name-link {
+  color: #333;
+  text-decoration: none;
+}
+
+.club-name {
+  max-width: 200px;
+}
+
+
+// .club-container {
+//   display: grid;
+//   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+//   gap: 20px;
+//   margin-top: 30px;
+//   margin-bottom: 95px;
+//   width: 300px;
+//   margin-left:auto;
+//   margin-right:auto;
+
+// }
+
 .club-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 20px;
-  margin-top: 30px;
-  margin-bottom: 95px;
-  width: 300px;
-  margin-left:auto;
-  margin-right:auto;
+  margin-top: 10px;
+}
+
+.club-card {
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  position: relative;
+}
+
+.club-created-at {
+  font-size: 11px;
+  color: #666;
+  margin-top: 43px;
+}
+
+.club-info-container {
+  flex: 1;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: column; /* Align children vertically */
+  justify-content: center; /* Center children vertically */
 
 }
 
@@ -90,9 +160,7 @@
 
 
 .delete-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  position: absolute ;
   border:solid thin;
   background-color: #d94f34;
   border-radius: 5px;
@@ -101,6 +169,7 @@
   font-size: 14px;
   width: 50px;
   height: 50px;
+  margin-left: 300px;
 }
 
 .trashcan {
