--- a/app/assets/stylesheets/pages/_club.scss
+++ b/app/assets/stylesheets/pages/_club.scss
@@ -4,15 +4,22 @@ body {
 
 .back-button {
   position: fixed;
-  top: 16px;
+  top: 20px;
   z-index: 10;
   margin-left: 8px;
+  display: flex;
+  align-items: center;
+  color: black;
+  font-size: 13px;
+  border-radius: 50px;
+  background-color: rgba(255, 255, 255, 0.642);
+  padding: 6px;
+  padding-right: 14px;
 }
 
 .back-button-img {
-  width: 50px;
-  height: 50px;
-  background-color: white;
+  width: 23px;
+  height: 23px;
   border-radius: 50%;
   margin-top:-3px;
   margin-left:1px;
