--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -12,23 +12,33 @@
   padding-top: 20px;
   color: black;
   margin-bottom: 20px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .dashclub-title {
   margin-top: 8px;
   margin-left: 10px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .user-info p {
   font-size: small;
   margin-left: 7px;
   color:black;
+  font-family: "Roboto", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .buttons-container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-left: 18px;
 }
 
 .create-club-button {
@@ -39,8 +49,15 @@
   margin-top: 10px;
 }
 
+.btn {
+  height:40px;
+
+  font-size:15px;
+  border-radius: 28px;
+  border:solid thin black;
+}
 // .club-image-container {
-//   position: relative;
+  //   position: relative;
 //   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 //   border: solid #A7E6FF;
 //   border-radius: 23px;
@@ -73,6 +90,9 @@
 .clubs-name {
   margin: 0;
   text-decoration: underline;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 // .club-name-overlay {
@@ -148,15 +168,11 @@
   display: flex;
   flex-direction: column; /* Align children vertically */
   justify-content: center; /* Center children vertically */
-
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
-.btn {
-  height:40px;
-  font-size:15px;
-  border-radius: 28px;
-  border:solid thin black;
-}
 
 
 .delete-button {
