--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,5 +1,6 @@
  <%= link_to request.referrer || root_path, class: 'back-button' do %>
-  <%=image_tag 'back-btn.png', alt: 'Back', class: 'back-button-img' %>
+  <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
+  Go back
   <% end %>
 <div class="activity-image" style="position: relative;">
   <%= image_tag "man_boxing.png", alt: 'uploaded-club-image', class: 'club-img' %>
