--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -1,6 +1,6 @@
 <%= link_to request.referrer || root_path, class: 'back-button' do %>
   <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
-  Go back
+  Back
   <% end %>
 
 <div class="activity-image">
@@ -50,6 +50,12 @@
   <%# <a href="#" class="show-more">Show More</a> %>
 </div>
 </div>
+
+<div class="map-container-show">
+
+
+</div>
+
 
 <div class="navbottom" style="display: flex; justify-content: space-between; gap: 10px; position: fixed; bottom: 0; width: 100%; background-color: white; padding: 10px;">
 
