--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -113,3 +113,11 @@ a.mapboxgl-ctrl-logo.mapboxgl-compact {
   display: block;
   border-bottom: 1px solid #A7E6FF;
 }
+
+#map-container {
+  height: 75vh;
+  z-index: 0;
+  margin: 10px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 14px black;
+}
