--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -36,7 +36,7 @@ body.home-page {
 }
 .navbar {
   color: gray;
-  border-top: 2px solid #A7E6FF;
+  border-top: 2px solid #838383;
 }
 
 .navbuttons a {
