--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -1,5 +1,5 @@
 .club-bodybag {
-  background-color: #A7E6FF;
+  background-color: black;
   padding-bottom: 25px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
@@ -7,13 +7,17 @@
   height: 183px;
 }
 
+body{
+  background-color: #b7b7b7;
+}
+
 .dash-title {
   text-align: center;
   padding-top: 20px;
-  color: black;
+  color: white;
   margin-bottom: 20px;
   font-family: "Roboto", serif;
-  font-weight: 100;
+  font-weight: 500;
   font-style: normal;
 }
 
@@ -21,14 +25,14 @@
   margin-top: 8px;
   margin-left: 10px;
   font-family: "Roboto", serif;
-  font-weight: 100;
+  font-weight: 500;
   font-style: normal;
 }
 
 .user-info p {
   font-size: small;
   margin-left: 7px;
-  color:black;
+  color:white;
   font-family: "Roboto", serif;
   font-weight: 400;
   font-style: normal;
@@ -54,7 +58,6 @@
 
   font-size:15px;
   border-radius: 28px;
-  border:solid thin black;
 }
 // .club-image-container {
   //   position: relative;
@@ -89,9 +92,8 @@
 
 .clubs-name {
   margin: 0;
-  text-decoration: underline;
   font-family: "Roboto", serif;
-  font-weight: 100;
+  font-weight: 400;
   font-style: normal;
 }
 
@@ -154,6 +156,8 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
   position: relative;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .club-created-at {
@@ -178,19 +182,13 @@
 .delete-button {
   position: absolute ;
   border:solid thin;
-  background-color: #d94f34;
-  border-radius: 5px;
+  background-color: #ffffff;
+  border-radius: 10px;
   padding: 5px 10px;
   text-decoration: none;
   font-size: 14px;
-  width: 50px;
-  height: 50px;
-  margin-left: 300px;
-}
-
-.trashcan {
- width: 37px;
- height: 33px;
- padding-right: 11px;
-
+  margin-left: 276px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
 }
