--- a/app/views/clubs/my_clubs.html.erb
+++ b/app/views/clubs/my_clubs.html.erb
@@ -1,6 +1,6 @@
 <%= link_to request.referrer || root_path, class: 'back-button' do %>
   <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
-  Go back
+  Back
   <% end %>
 
 <div class='club-bodybag'>
@@ -27,22 +27,20 @@
 <div class="club-container">
   <% @clubs.each do |club| %>
     <div class='club-card'>
-          <%= link_to club_path(club), data: {turbo_method: :delete, turbo_confirm: 'Are you sure?' }, class: 'delete-button' do %>
-            <%= image_tag 'deletebtn.svg', alt: 'Delete', class: 'trashcan' %>
-          <% end %>
       <% if club.image.attached? %>
         <div class="club-image-container">
           <%= cl_image_tag club.image.key, alt: club.name, class: 'club-image' %>
         </div>
-          <div class='club-info-container'>
-            <div class="club-name-overlay">
-              <h2 class="clubs-name"><%= link_to club.name, club_path(club), class: 'club-name-link' %></h2>
-            </div>
-            <div class='club-more-info'>
-              <p class="club-created-at">Created on: <%= club.created_at.strftime("%B %d, %Y") %></p>
-            </div>
-          </div>
       <% end %>
+      <div class='club-info-container'>
+        <div class="club-name-overlay">
+          <h2 class="clubs-name"><%= link_to club.name, club_path(club), class: 'club-name-link' %></h2>
+        </div>
+        <div class='club-more-info'>
+          <p class="club-created-at">Created on: <%= club.created_at.strftime("%B %d, %Y") %></p>
+        </div>
+      </div>
+      <%= link_to 'Delete', club_path(club), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete-button' %>
     </div>
   <% end %>
 </div>
