--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,21 +1,25 @@
  <%= link_to request.referrer || root_path, class: 'back-button' do %>
   <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
-  Go back
+  Back
   <% end %>
 <div class="activity-image" style="position: relative;">
   <%= image_tag "man_boxing.png", alt: 'uploaded-club-image', class: 'club-img' %>
+
 </div>
 
 <div class= "club-details">
   <div class="club-title">
     <h1><%= @club.name %> </h1>
+    <% if current_user == @club.user %>
+      <%= link_to 'Edit', edit_club_path(@club), class: 'button-edit' %>
+    <% end %>
   </div>
     <div class="club-desc" data-controller="toggle-text">
       <p id="club-description">
         <%= truncate(@club.details, length: 100) %>
         <% if @club.details.length > 100 %>
           <span data-toggle-text-target="moreText" style="display: none;"><%= @club.details[100..-1] %></span>
-          <button data-toggle-text-target="button" data-action="click->toggle-text#toggle">Learn More</button>
+          <button data-toggle-text-target="button" data-action="click->toggle-text#toggle" class='button-learn'>Learn More</button>
         <% end %>
       </p>
    </div>
