--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -67,7 +67,8 @@ body.home-page {
   font-weight: 600;
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  margin-top: 5px;
   color: black;
   text-decoration: none;
 }
@@ -77,6 +78,8 @@ body.home-page {
   font-size: 0.7em;
   color: rgb(33, 31, 31);
   margin-top: 2px;
+  font-size: 14px;
+  padding-left: 1vh;
 }
 
 
