--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,17 +1,17 @@
 <div class="navbar" style="display: flex; justify-content: space-around; position: fixed; bottom: 0; width: 100%; background-color: white; padding: 10px;">
 
 
-  <%# <div class='nav-item'>
+  <div class='nav-item'>
     <%= link_to activities_path do %>
-      <%# <%= image_tag 'search.png', alt: 'search', width: 30 %>
-      <%# <span class='icon-text'>Search</span> %>
-    <%# <% end %>
-  <%# </div> %>
+      <%= image_tag 'search.png', alt: 'search', width: 18 %>
+      <span class='icon-text'> SEARCH</span>
+    <% end %>
+  </div>
 
   <div class='nav-item'>
       <%= link_to activities_path do %>
-        <%= image_tag 'gym.png', alt: 'gym', width: 30 %>
-        <span class='icon-text'>ACTIVITIES</span>
+        <%= image_tag 'gym.png', alt: 'gym', width: 18 %>
+        <span class='icon-text'> ACTIVITIES</span>
       <% end %>
   </div>
 
@@ -46,13 +46,13 @@
   <div class='nav-item'>
     <% if user_signed_in? %>
       <%= link_to my_clubs_path do %>
-        <%= image_tag 'user.png', alt: 'account', width: 30 %>
-        <span class='icon-text'>ACCOUNT</span>
+        <%= image_tag 'user.png', alt: 'account', width: 18 %>
+        <span class='icon-text'> ACCOUNT</span>
       <% end %>
     <% else %>
       <%= link_to new_user_session_path do %>
-        <%= image_tag 'user.png', alt: 'login', width: 30 %>
-        <span class='icon-text'>LOGIN</span>
+        <%= image_tag 'user.png', alt: 'login', width: 18 %>
+        <span class='icon-text'> LOGIN</span>
       <% end %>
     <% end %>
   </div>
