--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -52,8 +52,8 @@
 </div>
 
 <div class="map-container-show">
-
-
+  <div id="showmap-container" class="showmap"data-controller="clubmap" data-clubmap-markers-value="<%= @markers.to_json %>" data-clubmap-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
 
 
