--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -41,7 +41,7 @@
   font-weight: normal;
   font-size: 1rem;
   margin-top: 10px;
-  color: #908d8d;
+  color: black;
 }
 
 .rating-box {
@@ -127,9 +127,9 @@ p {
 .activity-description {
   margin-top: 30px;
   font-weight: normal;
-  font-size: 1rem;
+  font-size: 16px;
   line-height: 1.6;
-  color: #908d8d;
+  color: #404040;
 }
 
 .show-more {
