--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
   </div>
 
   <div class='nav-item'>
-      <%= link_to activities_path do %>
+      <%= link_to my_activities_path do %>
         <%= image_tag 'gym.png', alt: 'gym', width: 18 %>
         <span class='icon-text'> ACTIVITIES</span>
       <% end %>
