--- a/app/views/activities/my_activities.html.erb
+++ b/app/views/activities/my_activities.html.erb
@@ -2,14 +2,16 @@
   <h3 class="my_activities-titles"><strong>Upcoming Activities</strong></h3>
   <div class="my_activities-index">
     <% @upcoming_activities.each do |activity| %>
-      <div class="my_activities-cards">
-        <img class="my_activities-images" src="<%= cl_image_path activity.image.key, height: 300, crop: :fill %>">
-        <div class="my_activities-cards-text">
-          <h6><strong><%= activity.title %></strong></h6>
-          <p><strong>Dojo:</strong> <%= activity.club.name %></p>
-          <p><%= activity.event_time.strftime("%a %b %e at %l:%M %p") %></p>
+      <%= link_to activity_path(activity), class: "my_activities-cards-link" do %>
+        <div class="my_activities-cards">
+          <img class="my_activities-images" src="<%= cl_image_path activity.image.key, height: 300, crop: :fill %>">
+          <div class="my_activities-cards-text">
+            <h6><strong><%= activity.title %></strong></h6>
+            <p><strong>Dojo:</strong> <%= activity.club.name %></p>
+            <p><%= activity.event_time.strftime("%a %b %e at %l:%M %p") %></p>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 
@@ -18,14 +20,17 @@
   <h3 class="my_activities-titles"><strong>What you’ve attended</strong></h3>
   <div class="my_activities-index">
     <% @attended_activities.each do |activity| %>
-      <div class="my_activities-cards">
-        <img class="my_activities-images" src="<%= cl_image_path activity.image.key, height: 300, crop: :fill %>">
-        <div class="my_activities-cards-text">
-          <h6><strong><%= activity.title %></strong></h6>
-          <p><strong>Dojo:</strong> <%= activity.club.name %></p>
-          <p><%= activity.event_time.strftime("%a %b %e at %l:%M %p") %></p>
+       <%= link_to activity_path(activity), class: "my_activities-cards-link" do %>
+        <div class="my_activities-cards">
+          <img class="my_activities-images" src="<%= cl_image_path activity.image.key, height: 300, crop: :fill %>">
+          <div class="my_activities-cards-text">
+            <h6><strong><%= activity.title %></strong></h6>
+            <p><strong>Dojo:</strong> <%= activity.club.name %></p>
+            <p><%= activity.event_time.strftime("%a %b %e at %l:%M %p") %></p>
+            <%= button_to "Feedback", activity_feedbacks_path(activity), method: :post, class: "feedback-btn" %>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
