--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -51,6 +51,10 @@
 </div>
 </div>
 
+<div class="activity-show-border"></div>
+
+<h3 class="activity-show-titles"><strong>Where it takes place</strong></h3>
+
 <div class="map-container-show">
   <div id="showmap-container" class="showmap"data-controller="clubmap" data-clubmap-markers-value="<%= @markers.to_json %>" data-clubmap-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
