--- a/app/assets/stylesheets/pages/_activities.scss
+++ b/app/assets/stylesheets/pages/_activities.scss
@@ -254,8 +254,6 @@ body {
   transition: background-color 0.3s ease;
 }
 
-
-
 .showmap {
   width: 100%;
   height: 100%;
@@ -266,4 +264,17 @@ body {
   height: 400px;
   margin:0;
   padding:0;
+}
+
+.activity-show-border {
+  margin-top: 2vh;
+  margin-left: 2vh;
+  margin-right: 2vh;
+  border-top: 1px solid #A7E6FF;
+}
+
+.activity-show-titles {
+  margin-top: 2vh;
+  margin-bottom: 2vh;
+  text-align: center;
 }
