--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -1,20 +1,22 @@
 .club-bodybag {
-  background-color: black;
+  background-color: white;
   padding-bottom: 25px;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   height: 183px;
 }
-
+.settings-borders {
+  margin-top: 1vh;
+  border-top: 1px solid #A7E6FF;
+}
 body{
-  background-color: #b7b7b7;
+  background-color: #ffffff;
 }
 
 .dash-title {
   text-align: center;
   padding-top: 20px;
-  color: white;
+  color: black;
   margin-bottom: 20px;
   font-family: "Roboto", serif;
   font-weight: 500;
@@ -30,19 +32,41 @@ body{
 }
 
 .user-info p {
-  font-size: small;
+  font-size: medium;
   margin-left: 7px;
-  color:white;
+  color: black;
   font-family: "Roboto", serif;
   font-weight: 400;
+  font-style: normal;
+}
+
+.user-info-container {
+  display: flex;
+  align-items: center;
+  margin-left: 28px;
+}
+.profile-picture {
+  margin-right:: 15px;
+}
+
+.profile-picture-img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.profile-button {
+  font-family: "Roboto", serif;
+  font-weight: 200;
   font-style: normal;
 }
 
 .buttons-container {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  margin-left: 18px;
+  align-items: flex-start;
+  padding-left: 13px;
+
 }
 
 .create-club-button {
@@ -50,8 +74,11 @@ body{
 }
 
 .logout-button {
-  margin-top: 10px;
+  margin-top: 23px;
+  text-decoration: underline;
+  margin-left: 12px;
 }
+
 
 .btn {
   height:40px;
@@ -59,6 +86,63 @@ body{
   font-size:15px;
   border-radius: 28px;
 }
+
+h4 {
+  padding: 27px;
+  font-family: "Roboto", serif;
+  font-weight: 500;
+  font-style: normal;
+  margin-left: -16px;
+}
+
+.button-icon {
+  width: 22px;
+  margin-right: 10px;
+}
+
+.personal-info-button {
+  margin-left: 11px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.create-dojo-button {
+  margin-left: 11px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.manage-dojos-button {
+  margin-left: 11px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+
+.contact-page-button {
+  margin-left: 11px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.terms-of-service-button {
+  margin-left: 11px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.privacy-policy-button {
+  margin-left: 11px;
+  font-family: "Roboto", serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
 // .club-image-container {
   //   position: relative;
 //   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -67,20 +151,20 @@ body{
 
 // }
 
-.club-image-container {
-  flex: 0 0 100px; /* Fixed width for the image container */
-  height: 100px; /* Fixed height for the image container */
-  overflow: hidden;
-  border-radius: 10px;
-}
+// .club-image-container {
+//   flex: 0 0 100px; /* Fixed width for the image container */
+//   height: 100px; /* Fixed height for the image container */
+//   overflow: hidden;
+//   border-radius: 10px;
+// }
 
-.club-image {
-    height:100%; //300px
-    width: 100%;
-    border-radius: 10px;
-    object-fit: cover;
-    border: solid thin black;
-  }
+// .club-image {
+//     height:100%; //300px
+//     width: 100%;
+//     border-radius: 10px;
+//     object-fit: cover;
+//     border: solid thin black;
+//   }
 
 // .clubs-name {
 //   padding-left: 10px;
@@ -90,12 +174,12 @@ body{
 // }
 
 
-.clubs-name {
-  margin: 0;
-  font-family: "Roboto", serif;
-  font-weight: 400;
-  font-style: normal;
-}
+// .clubs-name {
+//   margin: 0;
+//   font-family: "Roboto", serif;
+//   font-weight: 400;
+//   font-style: normal;
+// }
 
 // .club-name-overlay {
 //   position: absolute;
@@ -110,23 +194,23 @@ body{
 //   border-bottom-right-radius: 10px;
 // }
 
-.club-name-overlay {
-  margin-bottom: 10px;
-}
+// .club-name-overlay {
+//   margin-bottom: 10px;
+// }
 
-.club-info-container {
-  flex: 1;
-  padding-left: 20px;
-}
+// .club-info-container {
+//   flex: 1;
+//   padding-left: 20px;
+// }
 
-.club-name-link {
-  color: #333;
-  text-decoration: none;
-}
+// .club-name-link {
+//   color: #333;
+//   text-decoration: none;
+// }
 
-.club-name {
-  max-width: 200px;
-}
+// .club-name {
+//   max-width: 200px;
+// }
 
 
 // .club-container {
@@ -148,17 +232,17 @@ body{
   margin-top: 10px;
 }
 
-.club-card {
-  display: flex;
-  align-items: center;
-  background-color: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  position: relative;
-  margin-right: 10px;
-  margin-left: 10px;
-}
+// .club-card {
+//   display: flex;
+//   align-items: center;
+//   background-color: #fff;
+//   border-radius: 10px;
+//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+//   padding: 10px;
+//   position: relative;
+//   margin-right: 10px;
+//   margin-left: 10px;
+// }
 
 .club-created-at {
   font-size: 11px;
@@ -179,16 +263,16 @@ body{
 
 
 
-.delete-button {
-  position: absolute ;
-  border:solid thin;
-  background-color: #ffffff;
-  border-radius: 10px;
-  padding: 5px 10px;
-  text-decoration: none;
-  font-size: 14px;
-  margin-left: 276px;
-  font-family: "Roboto", serif;
-  font-weight: 100;
-  font-style: normal;
-}
+// .delete-button {
+//   position: absolute ;
+//   border:solid thin;
+//   background-color: #ffffff;
+//   border-radius: 10px;
+//   padding: 5px 10px;
+//   text-decoration: none;
+//   font-size: 14px;
+//   margin-left: 276px;
+//   font-family: "Roboto", serif;
+//   font-weight: 100;
+//   font-style: normal;
+// }
