added settings page

--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -56,6 +56,7 @@ body {
   font-family: "Roboto", serif;
   font-weight: 200;
   font-style: normal;
+  margin-left: 7px;
 }
 
 .buttons-container {
