--- a/app/views/clubs/my_clubs.html.erb
+++ b/app/views/clubs/my_clubs.html.erb
@@ -33,6 +33,7 @@
         Create a Dojo
         <% end %>
       </div>
+      <div class="settings-borders" style='padding: 4px;'></div>
         <div class='manage-dojos-button'>
         <%= link_to personal_info_path do %>
         <%= image_tag 'edit-3-svgrepo-com.svg', class: 'button-icon' %>
@@ -54,7 +55,7 @@
         Terms of Service
         <% end %>
       </div>
-      <div class="settings-borders"></div>
+      <div class="settings-borders" style='padding: 4px;'></div>
         <div class='privacy-policy-button'>
         <%= link_to personal_info_path do %>
         <%= image_tag 'privacy-dashboard-svgrepo-com.svg', class: 'button-icon' %>
