--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -33,7 +33,7 @@
   <!-- Middle Section -->
   <div class="rating-middle">
     <span class="rating-number">0</span>
-    <%=image_tag "thumbsdown.svg", class: "thumbs_down"%>
+    <%=image_tag "thumbs-down.svg", class: "thumbs_down"%>
   </div>
 
   <!-- Right Section -->
