--- a/app/views/shared/_flashes.html.erb
+++ b/app/views/shared/_flashes.html.erb
@@ -18,3 +18,10 @@
     <%= flash[:success] %>
   </div>
 <% end %>
+
+<% if flash[:error] %>
+  <div class="alert alert-danger alert-dismissible fade show m-1" role="alert">
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <%= flash[:error] %>
+  </div>
+<% end %>
