--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -1,4 +1,4 @@
- <%= link_to request.referrer || root_path, class: 'back-button' do %>
+ <%= link_to root_path, class: 'back-button' do %>
   <%=image_tag 'backbutton.svg', alt: 'Back', class: 'back-button-img' %>
   Back
   <% end %>
@@ -25,6 +25,7 @@
       </p>
    </div>
 
+
     <div class="more-info d-flex" style="justify-content: space-between;">
       <div class="social-links">
         <div class='location-tag'>
@@ -46,6 +47,17 @@
       </div>
     </div>
 </div>
+   <div class='manage-club-buttons'>
+      <div class='edit-dojo'>
+        <%= link_to 'Edit Dojo', edit_club_path(@clubs), class: 'edit-dojo-button' %>
+      </div>
+      <div class='delete-dojo'>
+       <%= link_to 'Delete Dojo', club_path(@club), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}, class: 'delete-dojo-button' %>
+      </div>
+      <div class='add-activity'>
+        <%= link_to 'Add Activity', new_club_activity_path(@club), class: 'add-dojo-button' %>
+      </div>
+    </div>
 
 <h2 class='activities-title-index'>Activities</h2>
 
