fixed the issues with css

--- a/app/assets/stylesheets/pages/_activities-index.scss
+++ b/app/assets/stylesheets/pages/_activities-index.scss
@@ -92,7 +92,7 @@ a.mapboxgl-ctrl-logo {
   display: flex;
   padding-bottom: 2vh;
   padding: 5px;
-  max-width: 600px;
+  max-width: 44vh;
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
