--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -3,7 +3,7 @@
   Back
   <% end %>
 
-<div class="activity-image">
+<div class="activate-image">
   <%= cl_image_tag @activity.image.key, alt: 'Boxing Lesson', class: 'activity-img' %>
 </div>
 
