--- a/app/assets/stylesheets/pages/_my_clubs.scss
+++ b/app/assets/stylesheets/pages/_my_clubs.scss
@@ -1,9 +1,10 @@
 .club-bodybag {
-  background-color: white;
+
   padding-bottom: 25px;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  height: 183px;
+  width: 100%;
+  margin: 0;
+
+
 }
 
 body {
@@ -45,17 +46,17 @@ body {
   align-items: center;
   margin-left: 28px;
 }
-.profile-picture {
+.prof-picture {
   margin-right:: 15px;
 }
 
-.profile-picture-img {
+.prof-picture-img {
   width: 50px;
   height: 50px;
   border-radius: 50%;
 }
 
-.profile-button {
+.prof-button {
   font-family: "Roboto", serif;
   font-weight: 200;
   font-style: normal;
