--- a/app/views/clubs/my_clubs.html.erb
+++ b/app/views/clubs/my_clubs.html.erb
@@ -7,12 +7,12 @@
 <h1 class='dash-title'>Account</h1>
   <div class="club-info d-flex">
    <div class='user-info-container d-flex'>
-      <div class='profile-picture'>
-          <%= image_tag 'babycroc.JPG', alt: 'Default Profile Picture', class: 'profile-picture-img' %>
+      <div class='prof-picture'>
+          <%= image_tag 'babycroc.JPG', alt: 'Default Profile Picture', class: 'prof-picture-img' %>
       </div>
       <div class='user-info'>
         <p><%= current_user.username %></p>
-        <div class='profile-button'>
+        <div class='prof-button'>
           <%= link_to 'Show Profile', profile_path %>
         </div>
       </div>
@@ -66,7 +66,7 @@
        <%= link_to 'Logout', destroy_user_session_path,  data: {turbo_method: :delete, turbo_confirm: "You are about to end the session"} %>
       </div>
     </div>
-
+</div>
 
 
 <%= render "shared/navbar" %>
