--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-profile-info">
 <div class="profile-page">
   <!-- Title "Profile" at the top -->
   <h1 class="profile-title">Profile</h1>
